# PurrScription

./: .editorconfig  .env.example  .env.production.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  start-macos.command  start.ps1  start.sh
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  package.json  pyproject.toml
apps/api/api/: __init__.py  audit.py  auth.py  config.py  database.py  events.py  exceptions.py  main.py  maintenance.py  models.py  observability.py  rbac.py  schemas.py  seed.py  serializers.py  state_machine.py
apps/api/api/routers/: auth.py  markers_comments.py  projects_tasks.py  quality_export.py  segments_media.py  terms.py  websocket.py
apps/api/api/services/: asr.py  gecko.py  quality.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial.py  002_user_avatar.py  003_segment_word_timings.py  004_comment_time_and_assignments.py  005_comment_color.py
apps/api/tests/: test_api.py  test_gecko.py
apps/web/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  (+7 more)
docs/: api-contract.md  architecture.md  data-model.md  definition-of-done.md  demo-script.md  hackathon-review-and-presentation.md  production-runbook.md  realtime.md
infra/: Caddyfile  Dockerfile.api  Dockerfile.web  docker-compose.tls.yml  docker-entrypoint-api.sh  nginx.conf
scripts/: _check-api-base.py  _check-api-status.py  _check-bundles.py  _check-dns.py  _check-dns2.py  _check-dns3.py  _check-https-old.py  _check-https-old2.py  _check-login.py  _check-old-headers.py  _check-old-host.py  _reset-hauras-pw.py  continue-vds-deploy.py  deploy-vds.py  deploy-web-fix.py  enable-tls.py  finish-vds-deploy.py  fix-media-perms.py
(+34 files in other folders)
