[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purrscription-api"
version = "0.1.0"
description = "PurrScription FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "PurrScription Team", email = "team@purrscription.dev" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "black>=23.10.0",
    "mypy>=1.7.0",
]

[project.scripts]
purrscription-seed = "api.seed:main"

[tool.setuptools]
packages = ["api"]

[tool.setuptools.package-data]
api = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I"]
exclude = [".venv", "venv", "migrations"]

[tool.ruff.isort]
known-third-party = ["fastapi", "sqlalchemy", "pydantic"]

[tool.black]
line-length = 100
target-version = ["py312"]
